Revert "Michael merge main con inclusion de video"

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,24 +1,9 @@
 .header {
-    background-color: #0C95F6;
+    background-color: #1e3a8a;
     color: white;
     text-align: center;
     padding: 15px;
+    font-size: 24px;
     font-weight: bold;
-    font-family: 'Inter', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items:end;
   }
-
-  .h1-title {
-    font-family: 'Inter', sans-serif;
-    font-size: 6em;
-    font-weight: bold;
-
-  }  
-  .h2-title {
-    font-family: 'Inter', sans-serif;
-    font-size: 1em;
-    color: #484545;
-
-  }
+  
