--- a/src/app/components/detail/detail.component.css
+++ b/src/app/components/detail/detail.component.css
@@ -1,68 +1,37 @@
-
-
-.modal{
-  display: block;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo gris semitransparente */
-
-}
-.modal-dialog {
-  max-width: 80%; /* Ancho mayor para hacerlo apaisado */
-  margin: 15em auto; /* Centrar el modal */
-}
-
-.modal-content {
-  display: flex; /* Para organizar los elementos en fila */
-  background-color: #f1f1f1; /* Fondo claro para el contenido */
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: none;
-}
-
-.modal-title {
-  font-size: 1.5rem;
-}
-
-
-
-.modal-body {
-  display: flex;
-  padding: 20px;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.modal-media img {
-  max-height: 12em; /* Limitar la altura de la imagen */
-  object-fit: cover; /* Ajustar la imagen sin deformarla */
-  margin-bottom: 2em;
-  border-radius: .5em;
-}
-
-
-
-.modal-media {
-  display: flex;
-  flex-direction: column;
-  align-content:center;
-}
-
-.modal-body .text-content {
-  flex: 1; /* Para que ocupe el espacio restante */
-}
-
-.modal-body p {
-  font-size: 1rem;
-  margin: 10px 0;
-}
-
-.modal-text {
-  text-align: left;
-  width: 50%;
-  padding-left: 5%;
-}
+.detalle-container {
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    max-width: 400px;
+    margin: 20px auto;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  h2 {
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  p {
+    margin: 5px 0;
+    font-size: 16px;
+    color: #555;
+  }
+  
+  .jugador-imagen {
+    width: 150px; /* Ajusta el tamaño */
+    height: auto;
+    display: block;
+    margin-top: 10px;
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para mejor diseño */
+  }
+  
+  .detalle-foto {
+    max-width: 100%;
+    height: auto;
+    max-height: 250px;
+    object-fit: cover;
+  }
+  
