--- a/src/app/components/media/media.component.css
+++ b/src/app/components/media/media.component.css
@@ -1,14 +1,5 @@
-iframe {
-  width: 100%;
-  height: auto;
-  aspect-ratio: 16 / 9;
-  border-radius: .5em;
-  display: block;
-}
 .media-container {
-  height: auto;
-  width: 100%;
-  max-width: 12em;
-  margin: 0 auto;
-  border-radius: .5em;
-}
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
